# kindel

./: .gitignore  .travis.yml  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  travis.yml  usage.ipynb
.github/workflows/: test.yml
kindel/: __init__.py  cli.py  debug.py  kindel.py  plot.py  plot_soft_clips.py  softclips.html
kindel/tests/: EU155341.fasta  HCV_AVU_AB_1.12345.R12.sub.bam  HCV_AVU_AB_7.1.R12.sub.bam  HCV_AVU_AB_7.2.R12.sub.bam  HCV_AVU_AB_9.1.R12.sub.bam  cns.fasta  hxb2.fasta  hxb2.fasta.amb  hxb2.fasta.ann  indel.fa  indel.sam  test_kindel.py
offcon/: offcon.py
offcon/tests/: 31_c100.fa
tests/: test_kindel.py
tests/data_bwa_mem/: 1.1.sub_test.bam  1.1.sub_test.fa  1.1.sub_test.realign.fa  2.1.sub_test.bam  2.1.sub_test.fa  2.1.sub_test.realign.fa  3.1.sub_test.bam  3.1.sub_test.fa  3.1.sub_test.realign.fa  4.1.sub_test.bam  4.1.sub_test.fa  4.1.sub_test.realign.fa  5.1.sub_test.bam  5.1.sub_test.fa  5.1.sub_test.realign.fa  6.1.sub_test.bam  6.1.sub_test.fa  6.1.sub_test.realign.fa  info.txt
tests/data_ext/: 1.issue23.debug.fa  1.issue23.debug.realign.fa  1.issue23.debug.sam  2.issue23.bc63.bam  2.issue23.bc63.fastq  2.issue23.bc63.realign.fa  2.issue23.bc63.sam  3.issue23.bc75.bam  3.issue23.bc75.fa  3.issue23.bc75.fastq  3.issue23.bc75.realign.fa  3.issue23.bc75.sam
tests/data_minimap2/: 1.1.multi.bam  1.1.multi.realign.fa  2.issue23.debug.bam  hxb2-gp120-mutated.bam  hxb2-gp120-mutated.realign.fa  hxb2-gp120-mutated.sam  tst.fa
tests/data_minimap2_bact/: bact.tiny.bam
tests/data_segemehl/: 1.1.sub_test.bam  (+4 more)
(+87 files in other folders)
