[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kindel"
authors = [{ name = "Bede Constantinides", email = "bedeabc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version", "description"]
dependencies = [
    "argh>=0.26.2",
    "tqdm>=4.11.2",
    "scipy>=0.19.0",
    "pandas>=0.19.2",
    "dnaio==1.2.2",
    "simplesam==0.1.3.2",
    "plotly>=2.0.0"
]
urls = { "Homepage" = "https://github.com/bede/kindel" }
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "pytest-cov", "flit"]

[project.scripts]
kindel = "kindel.cli:main"

[tool.ruff]
ignore = ["F722"]
